k8s/applications/edge-service/production/patch-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polar-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /  
spec:
  ingressClassName: nginx
  rules:
    - host: dejanlp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 80
